# fonvo-backend

./: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
app/: config.py  main.py
app/auth/: dependencies.py  jwt.py
app/db/: connection.py
app/db/queries/: config.py  conversations.py  preferences.py  profiles.py  scenarios.py  streaks.py  vocabulary.py
app/middleware/: admin_auth.py  error_handler.py  logging.py
app/models/: ai.py  config.py  conversations.py  preferences.py  profiles.py  scenarios.py  streaks.py  vocabulary.py
app/routers/: admin.py  ai.py  config.py  conversations.py  preferences.py  profiles.py  scenarios.py  streaks.py  vocabulary.py
app/services/: openai_service.py  realtime_token.py
migrations/: 009_ai_config.sql  010_seed_ai_config.sql  011_detected_level.sql  013_scenarios.sql  014_seed_scenarios.sql
scripts/: generate_translations.py
static/admin/: app.js  index.html  styles.css
supabase/migrations/: 20260313000001_scenario_tutor_review.sql  20260313000002_scenario_translations.sql  20260315000001_model_tiering.sql  20260315000002_post_conversation_model.sql  20260316000001_stt_transcription_prompt.sql  20260316000002_per_level_inline_corrections.sql  20260316000003_post_conversation_prompt_and_cleanup.sql  20260316000004_simplify_opening_instruction.sql  20260316000005_simplify_suggestions.sql  20260316000006_batch_translation_prompt.sql  20260317000001_improve_summary_prompt.sql
tests/: conftest.py  test_ai.py  test_auth.py  test_conversations.py  test_preferences.py  test_streaks.py  test_vocabulary.py
